# xschem

./: .gitignore  .tclint.toml  AUTHORS  CMakeLists.txt  Changelog  INSTALL  LICENSE  Makefile  Makefile.conf  Makefile.conf.in  README  README.md  README_MacOS.md  config.h  config.h.in  configure
.github/workflows/: bash,sh  blank.yml  ci.yaml  tcl-lint.yaml
XSchemWin/: INSTALL_WIN  README_WIN  XSchemWin.sln  XSchemWin.vcxproj  XSchemWin_cairo.vcxproj  config.h
XSchemWin/Installer/: create_binary.bat
XSchemWin/XSchemWix/: License.rtf  Product.wxs  XSchemWix.wixproj  doc.wxs  heat_doc.wxs  heat_xschem_library.wxs  (+2 more)
doc/: Makefile  index.html  menu_xschem.html  style.css
scconfig/: COPYING  Makefile  config.cache  configure  hooks.c  sccbox
src/: .save.swp  Makefile  Makefile.in  actions.c  add_custom_button.tcl  add_custom_menu.tcl  break.awk  cadence_style_rc  cairo_jpg.c  cairo_jpg.c:Zone.Identifier  cairo_jpg.h:Zone.Identifier  callback.c  change_index.tcl  change_ref.awk  check.c  clip.c  convert_to_verilog2001.awk  create_alloc_ids.awk  create_alloc_ids_windows.awk  create_alloc_ids_windows.bat  create_graph.tcl  create_symbol.tcl  draw.c  editprop.c  eval_expr.y  exp.awk  expandlabel.y  expandlabel.y.new  findnet.c  flatten.awk  flatten_savenodes.awk  flatten_tedax.awk  font.c  get_malloc_id.awk  globals.c  gschemtoxschem.awk  gtkwave_server.tcl  hash_iterator.c  herculestospice.awk  hilight.c  (+63 more)
tests/: cleanup_debug_file.awk  create_save.tcl  netlisting.tcl  open_close.tcl  run_regression.tcl  test_utility.tcl  xschemtest.tcl
xschem_library/: Makefile
(+2254 files in other folders)
